# ollama-shim

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  INSTALL.md  NETWORKING.md  README.md  config.py  install-windows-service.ps1  main.py  ollama-shim.service  ollama_shim.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  update_ollama_shim.sh
docs/: PROJECT_STRUCTURE.md
routes/: generate.py  health.py
scripts/: prepare_release.sh  remove_quotes.sh  run-tests.sh  run.bat  run.sh  setup_tests.sh  stop.sh  utils.py
src/: config.py  main.py  ollama_shim.py  utils.py
src/routes/: chat.py  generate.py  health.py  ollama_compat.py  unsupported.py
tests/: conftest.py  test_api.py  test_translation.py
